# state_estimation_benchmark

./: .gitignore  CMakeLists.txt  README.md  environment.yml  run_all_estimators.sh
common/: CMakeLists.txt
common/include/benchmark/: DatasetIO.hpp  Types.hpp
common/src/benchmark/: DatasetIO.cpp
data/anymalD_grandtour/tum/: georef_from_gnss.py
data_preprocess/: CMakeLists.txt
data_preprocess/apps/: precompute_feet_kinematics.cpp
data_preprocess/scripts/: compute_vel_rmse.py  convert_contacts_only.py  convert_to_tum.py  plot_fused_vs_gt.py  plot_gt_and_estimate.py  plot_legodom_vs_gtvel.py  plot_muse_attitude_vs_gt.py  plots.py  rotate_gt_velocity.py
data_process/: CMakeLists.txt
data_process/apps/: inspect_dataset.cpp  precompute_feet_kinematics.cpp
data_process/scripts/: compute_vel_rmse.py  convert_to_tum.py  plot_feet_kinematics.py  plot_fused_vs_gt.py  plot_legodom_vs_gtvel.py  plots.py
iekf/: CMakeLists.txt
iekf/apps/: main_iekf.cpp
iekf/include/iekf/InEKF/: InEKF.h  RobotState.h
iekf/include/iekf/estimator/: InvariantExtendedKalmanFilter.hpp  RobotStateIEKF.hpp
iekf/include/iekf/utility/: BasicFunctions.hpp  EstimatorCommonStruct.hpp  SaveFile.hpp
iekf/src/InEKF/: InEKF.cpp  LieGroup.cpp  NoiseParams.cpp  RobotState.cpp
iekf/src/estimator/: InvariantExtendedKalmanFilter.cpp
iekf/src/utility/: EstimatorCommonStruct.cpp
invariant_ekf/: README.md  load_data.m
invariant_ekf/include/: rotations.h
invariant_ekf/include/Models/: RobotParameter.hpp  estimator_parameters.hpp  invariant_smoother.hpp
invariant_ekf/src/: main.cpp
invariant_ekf/src/InEKF/: NoiseParams.cpp
invariant_ekf/src/Models/: InvariantSmoother.cpp  smoother_struct.cpp
invariant_smoother/: CMakeLists.txt  README.md
invariant_smoother/apps/: main_invariant_smoother.cpp
invariant_smoother/include/InEKF/: InEKF.h  NoiseParams.h  RobotState.h
invariant_smoother/include/Models/: BasicFunctions.hpp  InvariantExtendedKalmanFilter.hpp  InvariantSmoother.hpp  LeggedRobotKinematics.h  invariant_factors.hpp  robot_state.hpp  smoother_struct.hpp
invariant_smoother/include/invariant_smoother/estimator/: Estimator_Parameters.hpp  InvariantSmoother.hpp  RobotState_Smoother.hpp
invariant_smoother/include/invariant_smoother/utility/: BasicFunctions.hpp  CallFile.hpp  EstimatorCommonStruct.hpp  SaveFile.hpp
invariant_smoother/src/: main.cpp
invariant_smoother/src/InEKF/: InEKF.cpp  LieGroup.cpp  RobotState.cpp
invariant_smoother/src/Models/: InvariantExtendedKalmanFilter.cpp  LeggedRobotKinematics.cpp  invariant_factors.cpp  invariant_smoother.cpp
invariant_smoother/src/estimator/: InvariantSmoother.cpp
invariant_smoother/src/synchro_data/: plotting.py
invariant_smoother/src/utility/: EstimatorCommonStruct.cpp
muse/: CMakeLists.txt  README.md  build_debug.sh  build_release.sh  muse_conf.txt  standalone_state_estimator.cpp
muse/apps/: main_attitude.cpp  main_leg_odometry.cpp  main_muse.cpp  main_sensor_fusion.cpp
muse/include/: Csv.hpp  LegOdometry.hpp  Streams.hpp  lib.hpp
muse/include/Models/: SensorFusion.hpp  attitude_bias_NLO.hpp  attitude_bias_XKF.hpp
muse/include/Observers/: EKF.hpp  Observer.hpp
muse/lib/: libpinocchio_parsers.so.3.8.0
muse/muse_ws/src/state_estimator/: package.xml
muse/muse_ws/src/state_estimator/config/: attitude_plugin.yaml  contact_plugin.yaml  leg_odometry.yaml  sensor_fusion.yaml
muse/muse_ws/src/state_estimator/include/state_estimator/: lib.hpp
muse/muse_ws/src/state_estimator/src/plugins/: leg_odometry_plugin.cpp  sensor_fusion_plugin.cpp
muse/muse_ws/src/state_estimator/urdfs/: RBQ (Precise).urdf  RBQ (before changing feet balls).urdf  RBQ(DAVIDE).urdf  RBQ.urdf
muse/samples/: static_bottom_up.csv
